--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,40 +1,33 @@
 {
-  // Window
-  "window.menuBarVisibility": "compact",
   "window.zoomLevel": 0.5,
-  // Workbench
-  "workbench.colorTheme": "Theme",
-  "workbench.layoutControl.enabled": false,
   // Neovim
   "vscode-neovim.useWSL": true,
   "vscode-neovim.neovimInitVimPaths.linux": "~/.config/nvim/init-vscode.vim",
-  // Workbench
-  "workbench.iconTheme": "material-icon-theme",
-  "workbench.startupEditor": "none",
-  "workbench.editor.enablePreview": false,
+  "vscode-neovim.neovimExecutablePaths.linux": "~/.local/bin/nvim-linux64/bin/nvim",
   // Terminal
   "terminal.integrated.gpuAcceleration": "on",
-  "terminal.integrated.smoothScrolling": true,
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "terminal.integrated.fontFamily": "meslolgs nf",
   "terminal.integrated.env.windows": {},
   "terminal.integrated.env.linux": {},
   // Editor
+  "editor.renderWhitespace": "none",
   "editor.inlineSuggest.enabled": true,
   "editor.cursorWidth": 9,
   "editor.accessibilitySupport": "off",
-  "editor.smoothScrolling": true,
   "editor.fontSize": 14.5,
   "editor.fontWeight": "normal",
   "editor.minimap.enabled": false,
   "editor.formatOnSave": true,
-  "editor.cursorSmoothCaretAnimation": "on",
   "editor.fontFamily": "mononoki Nerd Font Mono",
   "editor.lineNumbers": "relative",
   "editor.wordWrap": "on",
   "editor.tabSize": 2,
   "editor.cursorSurroundingLines": 4,
   "editor.cursorBlinking": "solid",
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.smoothScrolling": true,
+  "editor.linkedEditing": true,
   // Explorer
   "explorer.confirmDelete": false,
   "explorer.confirmDragAndDrop": false,
@@ -43,10 +36,10 @@
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[html]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[typescript]": {
-    "editor.defaultFormatter": "vscode.typescript-language-features"
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
   "[javascript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
@@ -56,6 +49,9 @@
   },
   "[scss]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "[svelte]": {
+    "editor.defaultFormatter": "svelte.svelte-vscode"
   },
   "js/ts.implicitProjectConfig.experimentalDecorators": true,
   "prettier.singleQuote": true,
@@ -74,11 +70,24 @@
     "*.csv": "csv"
   },
   "files.autoSave": "afterDelay",
+  // Custom Theme
+
   // Other
   "security.workspace.trust.untrustedFiles": "open",
   "notebook.lineNumbers": "on",
   "breadcrumbs.symbolPath": "off",
-  "console-ninja.featureSet": "Pro",
+  "console-ninja.featureSet": "Community",
   "discord.removeRemoteRepository": true,
-  "editor.linkedEditing": true
+  "svelte.enable-ts-plugin": true,
+  "explorer.fileNesting.enabled": true,
+  "workbench.editorAssociations": {
+    "*.jar": "default"
+  },
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.list.smoothScrolling": true,
+  "workbench.startupEditor": "none",
+  "workbench.editor.enablePreview": false,
+  "workbench.layoutControl.enabled": false,
+  "workbench.colorTheme": "Theme",
+  "window.menuBarVisibility": "compact"
 }
